--- a/assets/style/smallscreen.css
+++ b/assets/style/smallscreen.css
@@ -6,6 +6,7 @@
 @media(max-width:700px){
     main{
         width: 95%;
+        background-color: transparent;
     }
 }
 @media(max-width:500px){
